# generate_ena_biosampleids

./: .gitignore  README.md  pyproject.toml
src/enabiosamples/: HostAssocMetagenomeBiosampleGenerator.py  check_jira_issues.py  ena_datasource.py  generate_cobiont_biosampleId.py  metagenome_biosamples.py  tol_jira_auth.py  update_ena_record.py  update_metagenome_ena_record.py
test_data/: binned_biosample.csv  mag_biosample.csv  primary_biosample.csv
